--- a/README
+++ b/README
@@ -9,5 +9,4 @@ Briefly speaking, the modifications are
 * Add new class *FastHtmlSerializer* to output the HTML tree non-recursively, to avoid stack overflow (especially for Android)
 * Other minor changes 
 
-HtmlCleaner is used as HTML parser in EasyRSS (http://easyrss.pursuer.me/).
-Author: Zheng Sun (http://pursuer.me).
+Author: iSharkFly (https://www.isharkfly.com/c/computer-program/java/15).
