Update iSharkFly for name

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 HtmlCleaner is a project originally developed by Vladimir Nikic (http://htmlcleaner.sourceforge.net/).
 
-This version is modified by Zheng Sun.
+This version is modified by iSharkFly.
 
 Briefly speaking, the modifications are
 
